[metadata]
name = subparsers best practice
author = Open Telekom Cloud - Ecosystem Squad
author_email = dl-pbcotcdeleco@t-systems.com
description = Code examples of using subparsers in Python as best practice.
description_file =
    README.md
home_page = https://github.com/tischrei/subparsers_best_practice
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = subparsers, python

[options]
packages = source

[options.entry_points]
console_scripts =
  attentionlist = source.run:main
